--- a/BioArchLinux/r-biocsingular/lilac.yaml
+++ b/BioArchLinux/r-biocsingular/lilac.yaml
@@ -1,7 +1,7 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-beachmat
 - r-biocgenerics
@@ -12,8 +12,11 @@ repo_depends:
 - r-rsvd
 - r-s4vectors
 - r-scaledmatrix
+repo_makedepends:
+- r-testthat
 update_on:
-- regex: BiocSingular_([\d._-]+).tar.gz
-  source: regex
-  url: https://bioconductor.org/packages/BiocSingular
+- source: rpkgs
+  pkgname: BiocSingular
+  repo: bioc
+  md5: true
 - alias: r
